--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "env:dev": "cross-env NODE_MONGO_HOST=mongodb://localhost/radicha",
+    "dev": "npm run env:dev -- nodemon app.js"
   },
   "author": "Hiroaki Aoba",
   "license": "MIT",
@@ -22,6 +23,7 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9"
   }
